# swagger/path/notifications.json
@@ -18,26 +18,46 @@
           "required": true
         },
         {
-          "name": "body",
-          "in": "body",
-          "required": true,
-          "schema": {
-            "type": "object",
-            "properties": {
-              "title": {
-                "type": "string",
-                "example": "알람합니다."
-              },
-              "content": {
-                "type": "string",
-                "example": "목소리가 별로네요"
-              },
-              "toastId": {
-                "type": "integer",
-                "example": 1
-              }
-            }
-          }
+          "name": "image",
+          "in": "formData",
+          "description": "file to upload",
+          "required": false,
+          "type": "file"
+        },
+        {
+          "name": "title",
+          "in": "formData",
+          "description": "file to upload",
+          "required": false,
+          "type": "text"
+        },
+        {
+          "name": "content",
+          "in": "formData",
+          "description": "file to upload",
+          "required": false,
+          "type": "text"
+        },
+        {
+          "name": "to",
+          "in": "formData",
+          "description": "file to upload",
+          "required": false,
+          "type": "text"
+        },
+        {
+          "name": "from",
+          "in": "formData",
+          "description": "file to upload",
+          "required": false,
+          "type": "text"
+        },
+        {
+          "name": "subTitle",
+          "in": "formData",
+          "description": "file to upload",
+          "required": false,
+          "type": "text"
         }
       ],
       "responses": {
@@ -52,6 +72,19 @@
               "error": {
                 "type": "string",
                 "example": null
+              },
+              "result": {
+                "type":"object",
+                "example": {
+                  "id": 1,
+                  "title": "aa",
+                  "content": "aa",
+                  "subTitle": "0",
+                  "to": "0",
+                  "from": "0",
+                  "updatedAt": "2019-04-29T12:31:31.487Z",
+                  "createdAt": "2019-04-29T12:31:31.487Z"
+                }
               }
             }
           }
@@ -88,6 +121,21 @@
               "error": {
                 "type": "string",
                 "example": null
+              },
+              "result": {
+                "type":"array",
+                "example": [
+                  {
+                    "id": 1,
+                    "title": "aa",
+                    "content": "aa",
+                    "subTitle": "0",
+                    "to": "0",
+                    "from": "0",
+                    "updatedAt": "2019-04-29T12:31:31.487Z",
+                    "createdAt": "2019-04-29T12:31:31.487Z"
+                  }
+                ]
               }
             }
           }
@@ -134,6 +182,19 @@
               "error": {
                 "type": "string",
                 "example": null
+              },
+              "result": {
+                "type":"object",
+                "example": {
+                  "id": 1,
+                  "title": "aa",
+                  "content": "aa",
+                  "subTitle": "0",
+                  "to": "0",
+                  "from": "0",
+                  "updatedAt": "2019-04-29T12:31:31.487Z",
+                  "createdAt": "2019-04-29T12:31:31.487Z"
+                }
               }
             }
           }
@@ -207,26 +268,46 @@
           "required": true
         },
         {
-          "name": "body",
-          "in": "body",
-          "required": true,
-          "schema": {
-            "type": "object",
-            "properties": {
-              "title": {
-                "type": "string",
-                "example": "알람합니다."
-              },
-              "content": {
-                "type": "string",
-                "example": "목소리가 별로네요"
-              },
-              "toastId": {
-                "type": "integer",
-                "example": 1
-              }
-            }
-          }
+          "name": "image",
+          "in": "formData",
+          "description": "file to upload",
+          "required": false,
+          "type": "file"
+        },
+        {
+          "name": "title",
+          "in": "formData",
+          "description": "file to upload",
+          "required": false,
+          "type": "text"
+        },
+        {
+          "name": "content",
+          "in": "formData",
+          "description": "file to upload",
+          "required": false,
+          "type": "text"
+        },
+        {
+          "name": "to",
+          "in": "formData",
+          "description": "file to upload",
+          "required": false,
+          "type": "text"
+        },
+        {
+          "name": "from",
+          "in": "formData",
+          "description": "file to upload",
+          "required": false,
+          "type": "text"
+        },
+        {
+          "name": "subTitle",
+          "in": "formData",
+          "description": "file to upload",
+          "required": false,
+          "type": "text"
         }
       ],
       "responses": {
